<resources>
    <string name="app_name">TravelTales</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_location">Select Location</string>
    <string name="submit">Submit</string>
    <string name="search_here">Search Here</string>
    <string name="address">Address</string>
    <string name="date_hint">Date</string>
    <string name="add_journal">Add Journal</string>
    <string name="landmarks">Landmarks</string>
    <string name="memories">Memories</string>
    <string name="no_images_to_display">No Images To Display</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="cont">Continue</string>
    <string name="slide_1_title">Add Journal</string>
    <string name="slide_2_title">Add your landmarks</string>
    <string name="slide_3_title">Capture Your Moment</string>
    <string name="back">Back\n</string>
    <string name="profile">Profile</string>
    <string name="delete_journal">Delete journal</string>
    <string name="list_journal">List Journal</string>
    <string name="update_journal">Update Journal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="go_to_home">Go To Home</string>
    <string name="add_todo">ToDo Places</string>
    <string name="addNewTodo">Add New Todo</string>
    <string name="save">Save</string>
    <string name="slide_1_desc">"Embark on a digital odyssey with our travel journal feature. Document your adventures, from the bustling streets of cities to the tranquil shores of distant shores. "</string>
    <string name="slide_2_desc">Transform your travels into timeless tales within our digital journal, where each landmark becomes a chapter in your adventure-filled story</string>
    <string name="slide_3_desc">Capture the essence of each destination with vivid descriptions, cherished memories, and hidden gems discovered along the way. Whether you\'re a seasoned explorer or a curious wanderer, let your journeys come to life in this virtual voyage through the world.</string>
    <string name="list_of_journals">List of Journals</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>




    <!--  User Related values   -->
    <string name="sign_in_signin">Sign In</string>
    <string name="email_sign_up">Email</string>
    <string name="password_sign_up">Password</string>
    <string name="confirm_password_sign_up">Confirm Password</string>
    <string name="sign_in_sign_up">Sign In</string>
    <string name="already_a_user_sign_up">Already a user?</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="sign_in_sign_in">Sign In</string>
    <string name="email_signin">Email</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="not_a_member_signin">Not a Member?</string>
    <string name="sign_up_btn_signin">Sign Up</string>
    <string name="profile_user">Profile</string>
    <string name="user_profile_user">User Profile</string>
    <string name="email__user">Email</string>
    <string name="example_email_com_user">example@email.com</string>
    <string name="want_to_change_password_user">Want to Change Password?</string>
    <string name="enter_new_password_user">Enter New Password</string>
    <string name="upload_profile_picture_btn_user">Upload Profile Picture</string>
    <string name="password_signin">Password</string>
    <string name="logout">Log Out</string>
    <string name="update_details">Update Details</string>
    <string name="change_picture">Change Picture</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="nabin_ghatani">Nabin Ghatani</string>
    <string name="student_id_8921960">Student ID: 8921960</string>
    <string name="harshada_yadav">Harshada Yadav</string>
    <string name="student_id_8928701">Student ID: 8928701</string>
    <string name="developers">Developers</string>
    <string name="yash_patel">Yash Kumar Patel</string>
    <string name="student_id_34567">Student ID: 8932978</string>
    <string name="info">Info</string>
</resources>