<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Title: User Details -->
    <TextView
        android:id="@+id/tvUserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/tvUserDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_launcher_background" />

    <!-- First Name -->
    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgProfile"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Enter First Name"
        android:textSize="16sp" />

    <!-- Last Name -->
    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Enter Last Name"
        android:textSize="16sp" />

    <!-- Email Label -->
    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/email__user"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp" />

    <!-- Displayed Email -->
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmailLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/example_email_com_user" />

    <!-- New Password EditText -->
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/enter_new_password_user"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <!-- Save Button for Details -->
    <Button
        android:id="@+id/btnSaveDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Update Details"
        android:textSize="18sp" />

    <!-- New Button for Upload Image -->
    <Button
        android:id="@+id/btnUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSaveDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/upload_profile_picture_btn_user"
        android:textSize="18sp" />

</RelativeLayout>
